# StarNaviSocialNetwork

./: .env.example  .gitignore  Dockerfile  README.md  data_bot.py  docker-compose.yml  pytest.ini  requirements.txt
SocialNetwork/: settings.py  urls.py
bot/: config.py  utils.py
poetry_social_network/: pyproject.toml
social_network_app/: admin.py  models.py  views.py
social_network_app/api/: filter.py  middleware.py  mixins.py  serializer.py  urls.py
social_network_app/migrations/: 0001_initial.py  0002_rename_author_post_user.py  0003_rename_user_post_author.py  0004_userprofile.py
social_network_app/templates/: login.html  register.html
social_network_app/test/: PostApi_tests.py
